Fix bottom right tab painting in high dpi.

Tabs currently draw a one-DIP overlap into the toolbar to correct for
alignment issues in non-integer DPI scales.  This regressed recently
(in crrev.com/c/1171917) on just the right side.  This CL restores the
old behavior.


Bug: 876730
Change-Id: I524b87af63359b507081ce9f0814ab8c8a3e17f6
Reviewed-on: https://chromium-review.googlesource.com/1186140
Commit-Queue: Taylor Bergquist <tbergquist@chromium.org>
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585967}
Former-commit-id: 045646225cbd23a0eb55c73efc204636e82a5dd3